# mcservers

./: README.md  pyproject.toml
.github/workflows/: test.yml
mcservers/: __main__.py  nbt.py  table.py  utils.py
